fix(package): fix package name and envs

--- a/src/components/ui/LinkButton.scss
+++ b/src/components/ui/LinkButton.scss
@@ -36,7 +36,7 @@ $container-max-widths: (
   font-size: 19.2px;
   word-break: break-word;
   word-wrap: break-word;
-  transition: all 0.15s ease-in;
+  transition: all 0.15s ease-in-out;
   cursor: pointer;
   &:hover {
     background-color: lighten($be-dark-green, 5%);
