chore: updated ui lib, style: commenting active link

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,9 +41,9 @@ body .p-highlight {
 body a {
   color: $be-orange;
 }
-body a:visited {
-  color: $be-orange-dark;
-}
+// body a:visited {
+//   color: $be-orange-dark;
+// }
 
 body .p-button {
   border-radius: 0;
