--- a/src/App.scss
+++ b/src/App.scss
@@ -41,9 +41,9 @@ body .p-highlight {
 body a {
   color: $be-orange;
 }
-// body a:visited {
-//   color: $be-orange-dark;
-// }
+body a:visited {
+  color: $be-orange-dark;
+}
 
 body .p-button {
   border-radius: 0;
@@ -61,7 +61,6 @@ body .p-inputtext {
   font-size: 16px;
   color: #333333;
   background: $be-inputs-background;
-  padding: 6px 12px;
   border: 1px solid transparent;
   transition: border-color 0.2s, box-shadow 0.2s;
   appearance: none;
@@ -69,6 +68,7 @@ body .p-inputtext {
   &:enabled:hover {
     border-color: #c1d6d5;
   }
+  padding: 5px 7px;
 }
 body .p-dropdown {
   background: $be-inputs-background;
